criando um menu responsivo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <li><a href="#">Eventos</a></li>
                         <li><a href="#">Sobre</a></li>
                     </ul>
+                    <div class="menu-icon">
+                        <img src="img/menu.png" alt="icone de menu">
+                    </div>
                 </nav>
             </div>
         </header>
@@ -36,5 +39,6 @@
             </div>
         </main>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
